--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -3,25 +3,37 @@
 
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="guardar(miFormulario)"
+        <form (ngSubmit)="guardar()"
             #miFormulario="ngForm"
             autocomplete="off">
+           
             <!-- CampoProducto -->
             <div class="mb-3 row">
-                <label class="col-sm-3 col-form-label">Producto:</label>
+                <label class="col-sm-3 col-form-label">
+                    Producto: 
+                    <span class="form-text text-danger">*</span>
+                </label>
                 <div class="col-sm-9">
                     <input type="text"
                         ngModel
                         name="producto"
                         class="form-control"
                         placeholder="Nombre del producto"
-                        required>
-                    <span class="form-text text-danger">Debe de tener 3 letras</span>
+                        required
+                        minlength="3">
+                    <span class="form-text text-danger"
+                        *ngIf="nombreValido()">
+                        Debe de tener mas de 3 letras
+                    </span>
                 </div>
             </div>
+            
             <!-- CampoPrecio -->
             <div class="mb-3 row">
-                <label class="col-sm-3 col-form-label">Precio:</label>
+                <label class="col-sm-3 col-form-label">
+                    Precio: 
+                    <span class="form-text text-danger">*</span>
+                </label>
                 <div class="col-sm-9">
                     <input type="number"
                         ngModel
@@ -29,8 +41,13 @@
                         class="form-control"
                         placeholder="Precio del producto"
                         required>
+                    <span class="form-text text-danger"
+                    *ngIf="precioValido()">
+                        Debe de ser superior a 0
+                    </span>
                 </div>
             </div>
+           
             <!-- CampoExistencias -->
             <div class="mb-3 row">
                 <label class="col-sm-3 col-form-label">Existencias:</label>
@@ -42,14 +59,17 @@
                         placeholder="Existencias del producto">
                 </div>
             </div>
+            <!-- Boton -->
             <div class="row">
                 <div class="col">
                     <button type="submit"
-                        class="btn btn-primary float-end">
+                        class="btn btn-primary float-end"
+                        [disabled]="!miFormulario.valid">
                         Guardar
                     </button>
                 </div>
-            </div>         
+            </div>
+
         </form>
     </div>
 </div>
@@ -57,13 +77,26 @@
 
 <div class="row">
     <div class="col">
+
         <span>
             Valid
         </span>
         <pre>{{ miFormulario.valid }}</pre>
+
+        <span>
+            Pristine
+        </span>
+        <pre>{{ miFormulario.pristine }}</pre>
+
+        <span>
+            Touched
+        </span>
+        <pre>{{ miFormulario.touched }}</pre>
+
         <span>
             Value
         </span>
         <pre>{{ miFormulario.value | json }}</pre>
+
     </div>
 </div>
