--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -15,7 +15,7 @@
                 </label>
                 <div class="col-sm-9">
                     <input type="text"
-                        ngModel
+                        [ngModel]="initForm.producto"
                         name="producto"
                         class="form-control"
                         placeholder="Nombre del producto"
@@ -36,7 +36,7 @@
                 </label>
                 <div class="col-sm-9">
                     <input type="number"
-                        ngModel
+                        [ngModel]="initForm.precio"
                         name="precio"
                         class="form-control"
                         placeholder="Precio del producto"
@@ -53,7 +53,7 @@
                 <label class="col-sm-3 col-form-label">Existencias:</label>
                 <div class="col-sm-9">
                     <input type="number"
-                        ngModel
+                        [ngModel]="initForm.existencias"
                         name="existencias"
                         class="form-control"
                         customMin
