--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,89 @@
-<p>basicos works!</p>
+<h2>Reactivos: Básicos</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <form autocomplete="off">
+           
+            <!-- CampoProducto -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Producto: 
+                    <span class="form-text text-danger">*</span>
+                </label>
+                <div class="col-sm-9">
+                    <input type="text"
+                        class="form-control"
+                        placeholder="Nombre del producto">
+                    <span class="form-text text-danger">
+                        Debe de tener mas de 3 letras
+                    </span>
+                </div>
+            </div>
+            
+            <!-- CampoPrecio -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Precio: 
+                    <span class="form-text text-danger">*</span>
+                </label>
+                <div class="col-sm-9">
+                    <input type="number"
+                        class="form-control"
+                        placeholder="Precio del producto">
+                    <span class="form-text text-danger">
+                        Debe de ser superior a 0
+                    </span>
+                </div>
+            </div>
+           
+            <!-- CampoExistencias -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Existencias:</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                        class="form-control"
+                        customMin
+                        placeholder="Existencias del producto">
+                </div>
+            </div>
+            <!-- Boton -->
+            <div class="row">
+                <div class="col">
+                    <button type="submit"
+                        class="btn btn-primary float-end">
+                        Guardar
+                    </button>
+                </div>
+            </div>
+
+        </form>
+    </div>
+</div>
+
+
+<!-- <div class="row">
+    <div class="col">
+
+        <span>
+            Valid
+        </span>
+        <pre>{{ miFormulario.valid }}</pre>
+
+        <span>
+            Pristine
+        </span>
+        <pre>{{ miFormulario.pristine }}</pre>
+
+        <span>
+            Touched
+        </span>
+        <pre>{{ miFormulario.touched }}</pre>
+
+        <span>
+            Value
+        </span>
+        <pre>{{ miFormulario.value | json }}</pre>
+
+    </div>
+</div> -->
