--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,88 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: Dinámicos</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <form autocomplete="off">
+            <!-- Nombre -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Nombre:
+                </label>
+                <div class="col-sm-9">
+                    <input type="text" 
+                        class="form-control" 
+                        placeholder="Nombre de la persona">
+                    <span class="form-text text-danger"
+                    >
+                        Este campo es obligatorio
+                    </span>
+                </div>
+            </div>
+
+            <!-- Agregar -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Agregar:
+                </label>
+                <div class="col-sm-9">
+                    
+                    <div class="input-group mb-3">
+                        <input type="text" 
+                        class="form-control" 
+                        placeholder="Agregar juego favorito"
+                        (keyup.enter)="true">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-primary" 
+                            type="button" 
+                            id="button-addon2"
+                            (click)="true">Agregar</button>
+                        </div>
+                    </div>
+
+                    <span class="form-text text-danger">
+                        Este campo es obligatorio
+                    </span>
+                </div>
+            </div>
+
+             <!-- Lista favoritos -->
+             <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Favoritos:
+                </label>
+                <div class="col-sm-9">
+                    <!-- <div class="input-group mb-3"
+                    *ngFor="let favorito of persona.favoritos; let i = index">
+                        <input type="text" 
+                            class="form-control mb-1">
+                            <div class="input-group-append">
+                                <button type="button"
+                                    class="btn btn-outline-danger"
+                                    (click)="true">Quitar</button>
+                            </div>
+                    </div> -->
+                </div>
+            </div>
+
+            <!-- Boton -->
+           <div class="row">
+               <div class="col">
+                   <button type="button"
+                       class="btn btn-primary float-end"
+                       (click)="true">
+                       Guardar
+                   </button>
+               </div>
+           </div>
+        </form>
+    </div>
+</div>
+
+
+<!-- <span>
+    Persona
+</span>
+<pre>
+    {{ persona | json }}
+</pre> -->
