--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,89 @@
-<p>switches works!</p>
+<h2>Template: Switches</h2>
+<hr>
+
+<form>
+
+    <!-- Radios -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">
+            Género
+        </label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                    type="radio" 
+                    name="flexRadioDefault"
+                    id="radioMasculino"
+                    value="M">
+                <label class="form-check-label" for="radioMasculino">
+                    Masculino
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input"
+                    type="radio" 
+                    name="flexRadioDefault"
+                    id="radioFemenino" 
+                    value="F">
+                <label class="form-check-label" for="radioFemenino">
+                    Femenino
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Switches -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">
+            Notificaciones
+        </label>
+        <div class="col-sm-9">
+            <div class="form-check form-switch mt-2">
+                <input class="form-check-input" 
+                    type="checkbox" 
+                    role="switch"
+                    id="flexSwitchCheckChecked">
+                <label class="form-check-label" for="flexSwitchCheckChecked">Recibir notificaciones</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Checks -->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">
+            
+        </label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input"
+                    type="checkbox" 
+                    value="" 
+                    id="flexCheckDefault"
+                    required>
+                <label class="form-check-label" for="flexCheckDefault">
+                    Términos y condiciones
+                </label>
+            </div> 
+        </div>
+    </div>
+
+    <!-- Boton -->
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end">
+                Guardar
+            </button>
+        </div>
+    </div>
+</form>
+<!-- 
+<h5>Valor del formulario</h5>
+<pre>{{ miFormulario.value | json }}</pre>
+<br>
+
+<h5>Persona</h5>
+<pre>{{ persona | json }}</pre>
+<br>
+
+<h5>Valido</h5>
+<pre>{{ miFormulario.valid }}</pre> -->
