--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -3,7 +3,9 @@
 
 <div class="row">
     <div class="col">
-        <form autocomplete="off">
+        <form autocomplete="off" 
+            [formGroup]="miFormulario"
+            (ngSubmit)="guardar()">
            
             <!-- CampoProducto -->
             <div class="mb-3 row">
@@ -14,8 +16,10 @@
                 <div class="col-sm-9">
                     <input type="text"
                         class="form-control"
-                        placeholder="Nombre del producto">
-                    <span class="form-text text-danger">
+                        placeholder="Nombre del producto"
+                        formControlName="nombre">
+                    <span class="form-text text-danger"
+                    *ngIf="campoNoEsValido('nombre')">
                         Debe de tener mas de 3 letras
                     </span>
                 </div>
@@ -30,8 +34,10 @@
                 <div class="col-sm-9">
                     <input type="number"
                         class="form-control"
-                        placeholder="Precio del producto">
-                    <span class="form-text text-danger">
+                        placeholder="Precio del producto"
+                        formControlName="precio">
+                    <span class="form-text text-danger"
+                    *ngIf="campoNoEsValido('precio')">
                         Debe de ser superior a 0
                     </span>
                 </div>
@@ -44,14 +50,20 @@
                     <input type="number"
                         class="form-control"
                         customMin
-                        placeholder="Existencias del producto">
+                        placeholder="Existencias del producto"
+                        formControlName="existencias">
+                        <span class="form-text text-danger"
+                        *ngIf="campoNoEsValido('existencias')">
+                            Las existencias deben de ser superior a 0
+                        </span>
                 </div>
             </div>
             <!-- Boton -->
             <div class="row">
                 <div class="col">
                     <button type="submit"
-                        class="btn btn-primary float-end">
+                        class="btn btn-primary float-end"
+                        [disabled]="miFormulario.invalid">
                         Guardar
                     </button>
                 </div>
@@ -62,7 +74,7 @@
 </div>
 
 
-<!-- <div class="row">
+<div class="row">
     <div class="col">
 
         <span>
@@ -86,4 +98,4 @@
         <pre>{{ miFormulario.value | json }}</pre>
 
     </div>
-</div> -->
+</div>
