--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -62,8 +62,8 @@
             <div class="row">
                 <div class="col">
                     <button type="submit"
-                        class="btn btn-primary float-end"
-                        [disabled]="miFormulario.invalid">
+                        class="btn btn-primary float-end">
+                        <!-- [disabled]="miFormulario.invalid" -->
                         Guardar
                     </button>
                 </div>
