--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,7 +1,8 @@
-<h2>Template: Switches</h2>
+<h2>Reactivos: Switches</h2>
 <hr>
 
-<form>
+<form [formGroup]="miFormulario"
+    (ngSubmit)="guardar()">
 
     <!-- Radios -->
     <div class="row mb-3">
@@ -11,8 +12,8 @@
         <div class="col-sm-9">
             <div class="form-check">
                 <input class="form-check-input" 
-                    type="radio" 
-                    name="flexRadioDefault"
+                    type="radio"
+                    formControlName="genero"
                     id="radioMasculino"
                     value="M">
                 <label class="form-check-label" for="radioMasculino">
@@ -21,8 +22,8 @@
               </div>
               <div class="form-check">
                 <input class="form-check-input"
-                    type="radio" 
-                    name="flexRadioDefault"
+                    type="radio"
+                    formControlName="genero"
                     id="radioFemenino" 
                     value="F">
                 <label class="form-check-label" for="radioFemenino">
@@ -42,7 +43,8 @@
                 <input class="form-check-input" 
                     type="checkbox" 
                     role="switch"
-                    id="flexSwitchCheckChecked">
+                    id="flexSwitchCheckChecked"
+                    formControlName="notificaciones">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Recibir notificaciones</label>
             </div>
         </div>
@@ -59,7 +61,7 @@
                     type="checkbox" 
                     value="" 
                     id="flexCheckDefault"
-                    required>
+                    formControlName="condiciones">
                 <label class="form-check-label" for="flexCheckDefault">
                     Términos y condiciones
                 </label>
@@ -70,13 +72,14 @@
     <!-- Boton -->
     <div class="row">
         <div class="col">
-            <button class="btn btn-primary float-end">
+            <button class="btn btn-primary float-end"
+            type="submit">
                 Guardar
             </button>
         </div>
     </div>
 </form>
-<!-- 
+
 <h5>Valor del formulario</h5>
 <pre>{{ miFormulario.value | json }}</pre>
 <br>
@@ -86,4 +89,4 @@
 <br>
 
 <h5>Valido</h5>
-<pre>{{ miFormulario.valid }}</pre> -->
+<pre>{{ miFormulario.valid }}</pre>
